<resources>
    <string name="app_name">Katalis Gateway</string>
    <string name="negara">PT.TEKNOLOGI KARTU INDONESIA</string>
    <string name="log">Log</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Forgot Password?</string>
    <string name="cs" translatable="false">Customer Service</string>
</resources>