<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_bg"
    tools:context=".ui.auth.LoginFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_psp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textSize="14dp"
                />
            <EditText
                android:id="@+id/ed_username"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="12dp"
                android:nextFocusDown="@+id/ed_password"
                android:background="@drawable/bg_ed_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textSize="14dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:passwordToggleDrawable="@drawable/ic_open_eyes"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:textSize="12dp"
                    android:background="@drawable/bg_ed_text"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword|textNoSuggestions"
                    android:nextFocusDown="@+id/btn_login"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                android:text="@string/lupa_kata_sandi"
                android:gravity="right"/>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="33dp"
                    android:text="@string/login"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_blue"/>
                <Button
                    android:id="@+id/btn_cs"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="33dp"
                    android:text="@string/cs"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_yellow"/>
<!--            <ImageView-->
<!--                android:layout_marginTop="26dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:background="@drawable/ic_powered_by"/>-->
<!--            <ImageView-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/ic_bni"/>-->
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>